# Nash-solver

./: README.md
additive_case/: CMakeLists.txt  LinearSolver.hpp  RandomSolver.hpp  Solver.hpp  a.in  main.cpp
terminal_case/: CMakeLists.txt  LinearSolver.hpp  RandomSolver.hpp  Solver.hpp  a.in  main.cpp
